♻️ 코드 수정 : commentService 메서드명 수정으로 인해 리팩터링